<resources>
    <string name="app_name">TV Channels</string>
    <string name="app_copyright">© 1M LAB 2015</string>
    <string name="app_version">Version %s</string>
    <string name="title_activity_act_main">TV Channels</string>
    <string name="title_activity_act_device">Add Device</string>
    <string name="title_activity_act_channel">Channels</string>
    <string name="title_activity_act_channel_add">Add channel</string>
    <string name="title_activity_act_channel_copy">Copy channel</string>
    <string name="title_activity_act_setting">Settings</string>

    <string name="str_loading">Loading…</string>
    <string name="str_doing">Processing. Please wait…</string>
    <string name="str_selected">selected</string>
    <string name="str_name">Name</string>
    <string name="str_desc">Description</string>
    <string name="str_num">Number</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_delete">Delete</string>
    <string name="str_deleted">Deleted</string>
    <string name="str_refreshed">Refreshed</string>
    <string name="str_ok">OK</string>
    <string name="str_update">Update</string>
    <string name="str_added">Added</string>
    <string name="str_copied">Copy successful</string>
    <string name="str_copy_to">Copying to %s</string>
    <string name="str_device_picker">Choose device</string>

    <!-- Main -->
    <string name="str_back_confirm">Touch back again to exit</string>

    <!-- Menu -->
    <string name="menu_settings">Settings</string>
    <string name="menu_done">Done</string>
    <string name="menu_search">Search</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_select_all">Select all</string>

    <!-- Device -->
    <string name="str_empty_devices">No devices</string>
    <string name="str_empty_devices_hint">Press + button to add a new device</string>
    <string name="str_device_add_hint">Input information about your device (TV, Radio…). All fields must not be blank.</string>
    <string name="str_device_name_hint">Samsung, LG… should be unique!</string>
    <string name="str_device_desc_hint">Description that help you determine the device</string>
    <string name="str_device_singular">Device</string>
    <string name="str_device_plural">Devices</string>
    <string name="str_device_delete_confirm">Delete a device will also erase all the channels inside.\nAre you sure you want to delete it?</string>
    <string name="str_device_update_confirm">Device exists. Do you want to update it?</string>
    <string name="str_device_add_confirm">This device does not exist. Do you want to add it?</string>
    <string name="str_device_no_selected">No device selected</string>

    <!-- Channel -->
    <string name="str_empty_channels">This device has no channel</string>
    <string name="str_empty_channels_hint">Press + button to create one</string>
    <string name="str_channel_add_hint">Input information of a channel. All fields must not be blank.</string>
    <string name="str_channel_singular">Channel</string>
    <string name="str_channel_plural">Channels</string>
    <string name="str_channel_num_hint">Channel number/position…</string>
    <string name="str_channel_name_hint">Name of this channel…</string>
    <string name="str_channel_desc_hint">Description that help you determine the channel</string>
    <string name="str_channel_delete_single_confirm">Are you sure you want to delete this channel?</string>
    <string name="str_channel_delete_multi_confirm">Are you sure you want to delete these channel?</string>
    <string name="str_channel_overwrite_confirm">This action will overwrite existing channels in selected device.\nAre you sure you want to do this?</string>
    <string name="str_channel_no_selected">No channel selected</string>

    <!-- Setting -->
    <string name="str_language">Language</string>
    <string name="str_language_hint">Language to display in app</string>
    <string name="str_backup">Backup</string>
    <string name="str_backup_hint">Save all your data to SD card</string>
    <string name="str_backup_overwrite">This will overwrite existing backup file.\nTo make sure you don\'t press backup by mistake, please confirm to create new backup.</string>
    <string name="str_backup_notfound">No backup found</string>
    <string name="str_backup_latest">Last backup:</string>
    <string name="str_backup_success">Backup successful</string>
    <string name="str_restore">Restore</string>
    <string name="str_restore_hint">Restore data from the backup you saved</string>
    <string name="str_restore_confirm">Restoration will replace all of your current data with data from the backup file.\nAre you sure you want to do that?</string>
    <string name="str_restore_success">Restore successful</string>
    <string name="str_about">About</string>
    <string name="str_about_hint">Information about developer</string>

    <!-- Permission -->
    <string name="permission_request">Permission Request</string>
    <string name="permission_write_storage">Permission is required to save files to your storage</string>
    <string name="permission_read_storage">Permission is required to read files from your storage</string>

    <!-- Error -->
    <string name="str_error_general">Unexpected error. Try again later.</string>
    <string name="str_error_must_not_empty">Must not empty</string>
    <string name="str_error_duplicated">Duplicated</string>
    <string name="str_error_invalid_data">Invalid data. Please check and try again.</string>
    <string name="str_error_backup_not_found">You haven\'t created any backup or file was deleted.</string>
    <string name="str_error_backup_nodata">You have no data to backup.\nPlease input some data and try again.</string>
    <string name="str_error_channel_exist">Channel already exists.\nPlease check and try again.</string>
</resources>
