<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActDevice"
    tools:ignore="MergeRootFrame">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10.0dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:gravity="start"
            android:text="@string/str_device_add_hint"
            android:textColorHint="@color/text_desc"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_name"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etDeviceName"
            style="@style/styleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3.0dip"
            android:hint="@string/str_device_name_hint"
            android:inputType="textAutoComplete|textCapWords"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:text="@string/str_desc"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etDeviceDesc"
            style="@style/styleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3.0dip"
            android:hint="@string/str_device_desc_hint"
            android:inputType="textAutoComplete|textCapSentences"
            android:maxLines="5" />

    </LinearLayout>


</ScrollView>
