<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActChannelAdd"
    tools:ignore="MergeRootFrame">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10.0dip">

        <TextView
            android:id="@+id/tvDeviceCopyHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_content_copy_black_24dp"
            android:drawablePadding="8dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:textColor="@color/text_main"
            android:textSize="14sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <View
            android:id="@+id/vDeviceCopyDivider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/list_divider_color"
            android:visibility="gone" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10.0dip"
            android:gravity="start"
            android:text="@string/str_channel_add_hint"
            android:textColorHint="#888888"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_num"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etChannelNum"
            style="@style/styleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3.0dip"
            android:digits="0123456789"
            android:hint="@string/str_channel_num_hint"
            android:inputType="numberDecimal"
            android:singleLine="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:text="@string/str_name"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etChannelName"
            style="@style/styleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3.0dip"
            android:hint="@string/str_channel_name_hint"
            android:inputType="textAutoComplete|textCapWords"
            android:maxLines="5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:text="@string/str_desc"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etChannelDesc"
            style="@style/styleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3.0dip"
            android:hint="@string/str_channel_desc_hint"
            android:inputType="textAutoComplete|textCapSentences"
            android:maxLines="5" />
    </LinearLayout>


</ScrollView>
