<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:gravity="center_vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp">

        <TextView
            style="@style/styleTextViewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_language" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spLanguage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/bg_dropdown"
            android:minWidth="100dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#E8E8E8" />

    <LinearLayout
        android:id="@+id/vBackup"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/selector"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            style="@style/styleTextViewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_backup" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#E8E8E8" />

    <LinearLayout
        android:id="@+id/vAbout"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/selector"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            style="@style/styleTextViewTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_about" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#E8E8E8" />
</LinearLayout>